react-fb-code-along

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-fb-code-along",
-  "homepage": "https://natarake.github.io/react-fb-code-along",
+  "homepage": "http://natarake.github.io/react-fb-code-along",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
